updated code for compatibility